--- a/public/cart.html
+++ b/public/cart.html
@@ -53,7 +53,7 @@
                         <a href="#" class="socials__item youtube"><i class="icon-youtube-play"></i></a>
                     </div>
 
-                        <a href="#login" class="login-link" v-if="!checkLogin">Войти</a>
+                        <a href="#login" class="login-link" v-if="!checkLogin" @click.prevent="$modal.show('login')">Войти</a>
                     <div class="user-info" v-if="checkLogin" v-text="userInfo"></div>
                         <a href="cart.html" class="btn basket-btn">Корзина</a>
 
