--- a/public/live.html
+++ b/public/live.html
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="total-price">1 990 ₽</div>
+                    <div class="total-price"  >{{getCartSum}}</div>
                 </div>
             </div>
         </div>
