--- a/public/cart.html
+++ b/public/cart.html
@@ -31,6 +31,7 @@
      <meta name="twitter:description" content="Узнать больше о вьюпортах в разных мобильных браузерах можно в Рассказе о Двух Viewport&#39;ах на quirksmode.org.">
 </head>
 <body>
+<div id="app">
 <header class="header">
     <div class="header__topline">
         <div class="container">
@@ -76,7 +77,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="total-price">1 990 ₽</div>
+                    <div class="total-price"  >{{getCartSum}}</div>
                 </div>
             </div>
         </div>
@@ -91,210 +92,14 @@
             <div class="cart__info col-md-6 text-right">В вашей корзине 4 блюда.</div>
         </div>
         <div class="row">
-            <div class="col-lg-6 col-xl-6 cart__item">
+            <div class="col-lg-6 col-xl-6 cart__item" v-for="data in cartItems">
+                <cartitem :data="data"></cartitem>
+            </div>
 
-                <div class="cart__item__wrapper">
-                    <a href="#" class="cart__item__remove"></a>
-                    <div class="row">
-                        <div class="col-xs-3 col-md-3 cart__item__img">
-                            <img src="./assets/images/food/1.jpg" alt="food" class="img-fluid"/>
-                        </div>
-                        <div class="col-xs-9 col-md-9">
-                            <div class="cart__item__title">1. Пиццони «Маргарита»</div>
-                            <div class="cart__item__info">
-                                <div class="param">
-                                    <div class="param__title">Вес:</div>
-                                    <div class="param__value">850 г.</div>
-                                </div>
-                                <div class="param">
-                                    <div class="param__title">Размер:</div>
-                                    <div class="param__value">средний</div>
-                                </div>
-                                <div class="param__title">Дополнительно:</div>
-                                <div class="param__value">
-                                    <div class="row">
-                                        <div class="col-xs-6 col-md-6">
-                                            <span class="param__tag">Салями  2х  150 ₽  </span>
-                                            <span class="param__tag">Сыр «Моцарелла»  1х  150 ₽   </span>
-                                        </div>
-                                        <div class="col-xs-6 col-md-6">
-                                            <div class="ui-controls-ingred vertical">
-                                                <a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить
-                                                    в блюдо</a>
-                                                <a href="#" class="remove-from-dish btn"><i
-                                                        class="icon-minus-circled"></i>Убрать из блюда</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="cart__item__bottom">
-                        <div class="cart__item__price">499 ₽</div>
-                        <div class="ui-amount-control vertical">
-                            <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                            <span class="ui-amount-control__value">1</span>
-                            <button class="plus-one-btn"><i class="icon-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- /cart__item -->
-            <div class="col-lg-6 col-xl-6 cart__item">
-
-                <div class="cart__item__wrapper">
-                    <a href="#" class="cart__item__remove"></a>
-                    <div class="row">
-                        <div class="col-xs-3 col-md-3 cart__item__img">
-                            <img src="./assets/images/food/1.jpg" alt="food" class="img-fluid"/>
-                        </div>
-                        <div class="col-xs-9 col-md-9">
-                            <div class="cart__item__title">1. Пиццони «Маргарита»</div>
-                            <div class="cart__item__info">
-                                <div class="param">
-                                    <div class="param__title">Вес:</div>
-                                    <div class="param__value">850 г.</div>
-                                </div>
-                                <div class="param">
-                                    <div class="param__title">Размер:</div>
-                                    <div class="param__value">средний</div>
-                                </div>
-                                <div class="param__title">Дополнительно:</div>
-                                <div class="param__value">
-                                    <div class="row">
-                                        <div class="col-xs-6 col-md-6">
-                                            <span class="param__tag">Салями  2х  150 ₽  </span>
-                                            <span class="param__tag">Сыр «Моцарелла»  1х  150 ₽   </span>
-                                        </div>
-                                        <div class="col-xs-6 col-md-6">
-                                            <div class="ui-controls-ingred vertical">
-                                                <a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить
-                                                    в блюдо</a>
-                                                <a href="#" class="remove-from-dish btn"><i
-                                                        class="icon-minus-circled"></i>Убрать из блюда</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="cart__item__bottom">
-                        <div class="cart__item__price">499 ₽</div>
-                        <div class="ui-amount-control vertical">
-                            <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                            <span class="ui-amount-control__value">1</span>
-                            <button class="plus-one-btn"><i class="icon-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- /cart__item -->
-            <div class="col-lg-6 col-xl-6 cart__item">
-
-                <div class="cart__item__wrapper">
-                    <a href="#" class="cart__item__remove"></a>
-                    <div class="row">
-                        <div class="col-xs-3 col-md-3 cart__item__img">
-                            <img src="./assets/images/food/1.jpg" alt="food" class="img-fluid"/>
-                        </div>
-                        <div class="col-xs-9 col-md-9">
-                            <div class="cart__item__title">1. Пиццони «Маргарита»</div>
-                            <div class="cart__item__info">
-                                <div class="param">
-                                    <div class="param__title">Вес:</div>
-                                    <div class="param__value">850 г.</div>
-                                </div>
-                                <div class="param">
-                                    <div class="param__title">Размер:</div>
-                                    <div class="param__value">средний</div>
-                                </div>
-                                <div class="param__title">Дополнительно:</div>
-                                <div class="param__value">
-                                    <div class="row">
-                                        <div class="col-xs-6 col-md-6">
-                                            <span class="param__tag">Салями  2х  150 ₽  </span>
-                                            <span class="param__tag">Сыр «Моцарелла»  1х  150 ₽   </span>
-                                        </div>
-                                        <div class="col-xs-6 col-md-6">
-                                            <div class="ui-controls-ingred vertical">
-                                                <a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить
-                                                    в блюдо</a>
-                                                <a href="#" class="remove-from-dish btn"><i
-                                                        class="icon-minus-circled"></i>Убрать из блюда</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="cart__item__bottom">
-                        <div class="cart__item__price">499 ₽</div>
-                        <div class="ui-amount-control vertical">
-                            <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                            <span class="ui-amount-control__value">1</span>
-                            <button class="plus-one-btn"><i class="icon-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- /cart__item -->
-            <div class="col-lg-6 col-xl-6 cart__item">
-
-                <div class="cart__item__wrapper">
-                    <a href="#" class="cart__item__remove"></a>
-                    <div class="row">
-                        <div class="col-xs-3 col-md-3 cart__item__img">
-                            <img src="./assets/images/food/1.jpg" alt="food" class="img-fluid"/>
-                        </div>
-                        <div class="col-xs-9 col-md-9">
-                            <div class="cart__item__title">1. Пиццони «Маргарита»</div>
-                            <div class="cart__item__info">
-                                <div class="param">
-                                    <div class="param__title">Вес:</div>
-                                    <div class="param__value">850 г.</div>
-                                </div>
-                                <div class="param">
-                                    <div class="param__title">Размер:</div>
-                                    <div class="param__value">средний</div>
-                                </div>
-                                <div class="param__title">Дополнительно:</div>
-                                <div class="param__value">
-                                    <div class="row">
-                                        <div class="col-xs-6 col-md-6">
-                                            <span class="param__tag">Салями  2х  150 ₽  </span>
-                                            <span class="param__tag">Сыр «Моцарелла»  1х  150 ₽   </span>
-                                        </div>
-                                        <div class="col-xs-6 col-md-6">
-                                            <div class="ui-controls-ingred vertical">
-                                                <a href="#" class="add-to-dish btn"><i class="icon-plus-circled"></i>Добавить
-                                                    в блюдо</a>
-                                                <a href="#" class="remove-from-dish btn"><i
-                                                        class="icon-minus-circled"></i>Убрать из блюда</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="cart__item__bottom">
-                        <div class="cart__item__price">499 ₽</div>
-                        <div class="ui-amount-control vertical">
-                            <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                            <span class="ui-amount-control__value">1</span>
-                            <button class="plus-one-btn"><i class="icon-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- /cart__item -->
         </div>
     </div>
 </section>
-
+</div>
 <section id="drinks-offer" class="block">
     <div class="container">
         <div class="drinks-offer__title block__title">Желаете напитки?</div>
