Сделал компонент корзины, автоподстановка адреса доставки

--- a/public/cart.html
+++ b/public/cart.html
@@ -84,214 +84,9 @@
     </div>
 </header>
 
-<section id="cart">
-    <div class="container">
-        <div class="page-nav"><a href="/"><i class="arrow-left"></i>Назад к меню</a></div>
-        <div class="cart__top">
-            <h2 class="pagetitle col-md-6">Корзина</h2>
-            <div class="cart__info col-md-6 text-right">В вашей корзине 4 блюда.</div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6 col-xl-6 cart__item" v-for="data in cartItems">
-                <cartitem :data="data"></cartitem>
-            </div>
+<cart :items="cartItems"></cart>
 
-        </div>
-    </div>
-</section>
 </div>
-<section id="drinks-offer" class="block">
-    <div class="container">
-        <div class="drinks-offer__title block__title">Желаете напитки?</div>
-        <div class="row">
-            <div class="col-lg-2 col-xl-">
-                <nav class="drinks-nav">
-                    <ul>
-                        <li class="active"><a href="#">Лимонады</a></li>
-                        <li><a href="#">Соки</a></li>
-                        <li><a href="#">Молочные коктейли</a></li>
-                        <li><a href="#">Фреши</a></li>
-                        <li><a href="#">Чай</a></li>
-                        <li><a href="#">Кофе</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="col-lg-10 col-xl-10">
-                <div class="row">
-                    <div class="col drinks-offer__item active ">
-                        <div class="drinks-offer__item__wrapper">
-                            <div class="drinks-offer__img">
-                                <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
-                            </div>
-                            <div class="drinks-offer__item__title">Лимонад апельсиновый</div>
-                            <div class="ui-control-foodsize drinks">
-                                <ul>
-                                    <li class="active"><a href="#">0.4 л</a></li>
-                                    <li><a href="#">0.6 л</a></li>
-                                </ul>
-                            </div>
-                            <div class="row v-middle drinks-offer__item__bottom">
-                                <div class="col">
-                                    <div class="cart__item__price">499 ₽</div>
-                                </div>
-                                <div class="col">
-                                    <div class="ui-amount-control vertical border-yellow">
-                                        <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                                        <span class="ui-amount-control__value">1</span>
-                                        <button class="plus-one-btn"><i class="icon-plus"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col drinks-offer__item">
-                        <div class="drinks-offer__item__wrapper">
-                            <div class="drinks-offer__img">
-                                <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
-                            </div>
-                            <div class="drinks-offer__item__title">Лимонад апельсиновый</div>
-                            <div class="ui-control-foodsize drinks">
-                                <ul>
-                                    <li class="active"><a href="#">0.4 л</a></li>
-                                    <li><a href="#">0.6 л</a></li>
-                                </ul>
-                            </div>
-                            <div class="row v-middle drinks-offer__item__bottom">
-                                <div class="col">
-                                    <div class="cart__item__price">499 ₽</div>
-                                </div>
-                                <div class="col">
-                                    <div class="ui-amount-control vertical border-yellow">
-                                        <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                                        <span class="ui-amount-control__value">1</span>
-                                        <button class="plus-one-btn"><i class="icon-plus"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col drinks-offer__item ">
-                        <div class="drinks-offer__item__wrapper">
-                            <div class="drinks-offer__img">
-                                <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
-                            </div>
-                            <div class="drinks-offer__item__title">Лимонад апельсиновый</div>
-                            <div class="ui-control-foodsize drinks">
-                                <ul>
-                                    <li class="active"><a href="#">0.4 л</a></li>
-                                    <li><a href="#">0.6 л</a></li>
-                                </ul>
-                            </div>
-                            <div class="row v-middle drinks-offer__item__bottom">
-                                <div class="col">
-                                    <div class="cart__item__price">499 ₽</div>
-                                </div>
-                                <div class="col">
-                                    <div class="ui-amount-control vertical border-yellow">
-                                        <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                                        <span class="ui-amount-control__value">1</span>
-                                        <button class="plus-one-btn"><i class="icon-plus"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col drinks-offer__item ">
-                        <div class="drinks-offer__item__wrapper">
-                            <div class="drinks-offer__img">
-                                <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
-                            </div>
-                            <div class="drinks-offer__item__title">Лимонад апельсиновый</div>
-                            <div class="ui-control-foodsize drinks">
-                                <ul>
-                                    <li class="active"><a href="#">0.4 л</a></li>
-                                    <li><a href="#">0.6 л</a></li>
-                                </ul>
-                            </div>
-                            <div class="row v-middle drinks-offer__item__bottom">
-                                <div class="col">
-                                    <div class="cart__item__price">499 ₽</div>
-                                </div>
-                                <div class="col">
-                                    <div class="ui-amount-control vertical border-yellow">
-                                        <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                                        <span class="ui-amount-control__value">1</span>
-                                        <button class="plus-one-btn"><i class="icon-plus"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col drinks-offer__item ">
-                        <div class="drinks-offer__item__wrapper">
-                            <div class="drinks-offer__img">
-                                <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
-                            </div>
-                            <div class="drinks-offer__item__title">Лимонад апельсиновый</div>
-                            <div class="ui-control-foodsize drinks">
-                                <ul>
-                                    <li class="active"><a href="#">0.4 л</a></li>
-                                    <li><a href="#">0.6 л</a></li>
-                                </ul>
-                            </div>
-                            <div class="row v-middle drinks-offer__item__bottom">
-                                <div class="col">
-                                    <div class="cart__item__price">499 ₽</div>
-                                </div>
-                                <div class="col">
-                                    <div class="ui-amount-control vertical border-yellow">
-                                        <button class="minus-one-btn"><i class="icon-minus"></i></button>
-                                        <span class="ui-amount-control__value">1</span>
-                                        <button class="plus-one-btn"><i class="icon-plus"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="checkout">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-xl-6">
-                <div class="row">
-                    <div class="col">
-                        <div class="checkout-address">
-                            <div class="checkout-address__title">Адрес доставки</div>
-                            <div class="checkout-address__value"><a href="#" class="actionlink">ул. Таганская, д.39стр6, подьезд 1, кв. 11 <i class=""icon-arrow-down"></i></i></a></div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="checkout-payment">
-                            <div class="checkout-payment__title">Способ оплаты</div>
-                            <div class="checkout-payment__value"><a href="#" class="actionlink">Оплата курьеру наличными <i class=""icon-arrow-down"></i></a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-xl-6">
-                <div class="row v-middle">
-                    <div class="col text-right">
-                        <div id="total-cart-price">1 449 ₽</div>
-                    </div>
-                    <div class="col">
-                        <button class="checkout__submit btn" onclick="location.href='/live.html'">Оформить заказ</button>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="bonus-balance text-right">
-            <p class="bonus-balance__title">На вашем счете <span class="bonus-balance__value">300</span> бонусных рублей</p>
-            <p><a href="#" class="actionlink">Применить к счету</a> <a href="#" class="actionlink">Копить дальше</a></p>
-        </div>
-    </div>
-</section>
 
 <footer class="footer">
     <div class="container">
