--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 
                 <div class="form-group">
                     <input type="password" class="form-control" name="password" value="" placeholder="Пароль"/>
-                    <a href="#" @click.prevent="restorePassword">Забыли пароль</a>
+                    <a href="#" @click.prevent="restorePassword">Забыли пароль?</a>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="form-control" name="submit">Отправить</button>
@@ -143,6 +143,65 @@
                 <input type="hidden" class="form-control" name="password" value=""  v-model="password"/>
                 <input type="hidden" class="form-control" name="password_confirm" value=""
                        placeholder="Подтверждение пароля" v-model="passwordConfirm"/>
+            </form>
+        </div>
+    </modal>
+    <modal name="restorepassword" height="auto" adaptive v-cloak>
+        <button @click="$modal.hide('restorepassword')" class="modal-close">
+            x
+        </button>
+        <h3 class="modal-header">Восстановление пароля</h3>
+        <div class="modal-body">
+            <form name="restorepassword" action="/" method="post" @submit.prevent="getRestoreCode" id="restorepassword-form">
+                <div v-if="Object.keys(errors.restorepassword).length!==0">
+                    <b>Пожалуйста исправьте указанные ошибки:</b>
+                    <ul>
+                        <li v-for="(error,input) in errors.restorepassword">{{ error }}</li>
+                    </ul>
+                </div>
+                <div class="form-group">
+                    <input  class="form-control" name="phone" value="" placeholder="Телефон"
+                           v-model="phone" v-mask="'8-###-###-##-##'"/>
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="form-control" name="submit">Отправить</button>
+                </div>
+            </form>
+        </div>
+    </modal>
+    <modal name="restorepassword2" height="auto" adaptive v-cloak>
+        <button @click="$modal.hide('restorepassword2')" class="modal-close">
+            x
+        </button>
+        <h3 class="modal-header">Восстановление пароля</h3>
+        <div class="modal-body">
+            <form name="restorepassword2" action="/" method="post" @submit.prevent="activateNewPassword" id="restorepassword-form2">
+                <div v-if="Object.keys(errors.restorepassword2).length!==0">
+                    <b>Пожалуйста исправьте указанные ошибки:</b>
+                    <ul>
+                        <li v-for="(error,input) in errors.restorepassword2">{{ error }}</li>
+                    </ul>
+                </div>
+                <div class="form-group">
+                    <input type="hidden" class="form-control" name="phone" value="" placeholder="Телефон"
+                            v-model="phone" v-mask="'8-###-###-##-##'"/>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="code" value="" placeholder="Код из смс" />
+
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" name="password" value="" placeholder="Пароль" v-model="password"/>
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" name="password_confirm" value=""
+                           placeholder="Подтверждение пароля" v-model="passwordConfirm"/>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="form-control" name="submit">Отправить</button>
+                </div>
+
             </form>
         </div>
     </modal>
