filters test+change logic of toggl

--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
                     <mainmenu :data="menu"></mainmenu>
                 </div>
                 <div class="col-lg-3 col-xl-3    ">
-                    <filters :filters="filters"></filters>
+                    <filters :filters="tags"></filters>
 
                     <search></search>
 
